A lot of changes, added support for 80-col card, changed 40-col output to support japanese fonts, added listing to cpu, several fixes.

--- a/src/resource.rc
+++ b/src/resource.rc
@@ -727,6 +727,9 @@ BEGIN
     12119                   "Внешний файл"
     12120                   "Без звука"
     12121                   "Плата Softcard"
+    12122                   "ЦП 65C02"
+    12123                   "Плата Videx Videoterm"
+    12124                   "Плата Thunderclock Plus"
 END
 
 STRINGTABLE DISCARDABLE 
