--- a/src/resource.rc
+++ b/src/resource.rc
@@ -520,43 +520,8 @@ END
 // Version
 //
 
-VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,3,1,1
- PRODUCTVERSION 1,3,1,1
- FILEFLAGSMASK 0x3fL
-#ifdef _DEBUG
- FILEFLAGS 0x1L
-#else
- FILEFLAGS 0x0L
-#endif
- FILEOS 0x40004L
- FILETYPE 0x1L
- FILESUBTYPE 0x0L
-BEGIN
-    BLOCK "StringFileInfo"
-    BEGIN
-        BLOCK "041904b0"
-        BEGIN
-            VALUE "Comments", "Эмулятор компьютеров Агат-7,9, Apple ][\0"
-            VALUE "CompanyName", "Nop\0"
-            VALUE "FileDescription", "Эмулятор компьютеров Агат-7,9, Apple ][\0"
-            VALUE "FileVersion", "1, 3, 1, 1\0"
-            VALUE "InternalName", "emulator.exe\0"
-            VALUE "LegalCopyright", "Copyright © 2008,2009 Nop\0"
-            VALUE "LegalTrademarks", "\0"
-            VALUE "OriginalFilename", "interface.exe\0"
-            VALUE "PrivateBuild", "\0"
-            VALUE "ProductName", "Эмулятор компьютеров Агат-7,9, Apple ][\0"
-            VALUE "ProductVersion", "1, 3, 1, 1\0"
-            VALUE "SpecialBuild", "\0"
-        END
-    END
-    BLOCK "VarFileInfo"
-    BEGIN
-        VALUE "Translation", 0x419, 1200
-    END
-END
 
+#include "resversion.h"
 #endif    // !_MAC
 
 
@@ -760,6 +725,7 @@ BEGIN
     12122                   "ЦП 65C02"
     12123                   "Плата Videx Videoterm"
     12124                   "Плата Thunderclock Plus"
+    12125		    "Ячейка принтера Агат-9"
 END
 
 STRINGTABLE DISCARDABLE 
