--- a/src/resource.rc
+++ b/src/resource.rc
@@ -608,18 +608,20 @@ END
 
 STRINGTABLE DISCARDABLE 
 BEGIN
-    10000                   "Файлы ПЗУ (*.rom)"
+    10000                   "Файлы ПЗУ (*.rom)@*.rom@Все файлы@*.*@"
     10001                   "Выбор файла ПЗУ"
-    10002                   "Файлы конфигурации (*.cfg)"
+    10002                   "Файлы конфигурации (*.cfg)@*.cfg@Все файлы@*.*@"
     10003                   "Выбор файла конфигурации"
-    10004                   "Файлы шрифтов (*.fnt)"
+    10004                   "Файлы шрифтов (*.fnt)@*.fnt@Все файлы@*.*@"
     10005                   "Выбор файла знакогенератора"
-    10006                   "Файлы образов (*.dsk)"
+    10006                   "Файлы образов (*.dsk)@*.dsk@Файлы сырых данных (*.nib)@*.nib@Все файлы@*.*@"
     10007                   "Выбор файла образа диска"
-    10008                   "Файлы ленты (*.wav)"
+    10008                   "Файлы ленты (*.wav)@*.wav@Все файлы@*.*@"
     10009                   "Выбор файла ленты для чтения"
     10010                   "Выбор файла ленты для записи"
     10011                   "Выбор файла ленты"
+    10012                   "Текстовые файлы (*.txt)@*.txt@Все файлы@*.*@"
+    10013                   "Выбор файла для записи"
 END
 
 STRINGTABLE DISCARDABLE 
