Added new xIO interface

--- a/src/resource.rc
+++ b/src/resource.rc
@@ -651,7 +651,7 @@ BEGIN
     10003                   "Выбор файла конфигурации"
     10004                   "Файлы шрифтов (*.fnt)@*.fnt@Все файлы@*.*@"
     10005                   "Выбор файла знакогенератора"
-    10006                   "Файлы образов (*.dsk)@*.dsk@Файлы сырых данных (*.nib)@*.nib@Все файлы@*.*@"
+    10006		    "Все файлы образов дисков (*.dsk, *.img, *.nib)@*.dsk;*.img;*.nib@Файлы образов (*.dsk)@*.dsk@Файлы ""сырых"" данных (*.nib)@*.nib@Все файлы@*.*@"
     10007                   "Выбор файла образа диска"
     10008                   "Файлы ленты (*.wav)@*.wav@Все файлы@*.*@"
     10009                   "Выбор файла ленты для чтения"
@@ -663,6 +663,8 @@ BEGIN
     10015                   "Выбор бинарного файла для записи"
     10016                   "Файлы изображений Tiff (*.tiff)@*.tiff@Все файлы@*.*@"
     10017                   "Выбор графического файла для записи"
+    10018                   "Образ памяти (*.ram)@*.ram@Все файлы@*.*@"
+    10019                   "Выбор образа памяти"
 END
 
 STRINGTABLE DISCARDABLE 
@@ -726,6 +728,12 @@ BEGIN
     12009                   "20 Кбайт"
     12010                   "24 Кбайта"
     12011                   "36 Кбайт"
+    12012		    "256 Кбайт"  // 4096
+    12013		    "512 Кбайт"  // 8192
+    12014		    "768 Кбайт"  // 16384
+    12015		    "1 Мбайт"  // 32768
+    12016		    "2 Мбайта"  // 65536
+    12017		    "4 Мбайта"  // 131072
 END
 
 STRINGTABLE DISCARDABLE 
@@ -763,6 +771,8 @@ BEGIN
     12126                   "Плата звука Mockingboard"
     12127                   "Ячейка часов Nippel"
     12128                   "Плата Parallel Printer Card"
+    12129                   "Плата Apple ][ Memory Expansion Card"
+    12130                   "Плата RamFactor"
 END
 
 STRINGTABLE DISCARDABLE 
