Added Saturn Card emulation

--- a/src/resource.rc
+++ b/src/resource.rc
@@ -773,6 +773,7 @@ BEGIN
     12128                   "Плата Parallel Printer Card"
     12129                   "Плата Apple ][ Memory Expansion Card"
     12130                   "Плата RamFactor"
+    12131                   "Плата Saturn Ram Board"
 END
 
 STRINGTABLE DISCARDABLE 
