Added support for custom palettes and keymaps

--- a/src/resource.rc
+++ b/src/resource.rc
@@ -665,13 +665,17 @@ BEGIN
     10017                   "Выбор графического файла для записи"
     10018                   "Образ памяти (*.ram)@*.ram@Все файлы@*.*@"
     10019                   "Выбор образа памяти"
+    10020                   "Раскладка клавиатуры (*.bin)@*.bin@Все файлы@*.*@"
+    10021                   "Выбор раскладки клавиатуры"
+    10022                   "Палитра экрана (*.pal)@*.pal@Все файлы@*.*@"
+    10023                   "Выбор палитры экрана"
 END
 
 STRINGTABLE DISCARDABLE 
 BEGIN
-    10020                   "Ресурс"
-    10021                   "Устройство"
-    10022                   "Информация"
+    10100                   "Ресурс"
+    10101                   "Устройство"
+    10102                   "Информация"
 END
 
 STRINGTABLE DISCARDABLE 
@@ -798,6 +802,8 @@ BEGIN
     12215                   "(Джойстик)"
     12216                   "(Монитор)"
     12217                   "(Магнитофон)"
+    12218                   "(Клавиатура)"
+    12219                   "(Палитра)"
 END
 
 STRINGTABLE DISCARDABLE 
