--- a/src/resource.rc
+++ b/src/resource.rc
@@ -98,7 +98,7 @@ END
 
 IDD_MAIN DIALOG DISCARDABLE  65535, 65535, 187, 169
 STYLE DS_ABSALIGN | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU | 
-    WS_THICKFRAME
+    WS_THICKFRAME | WS_MINIMIZEBOX
 CAPTION VERSION_NAME_STR
 FONT 9, "Tahoma"
 BEGIN
