Added mouse support

--- a/src/resource.rc
+++ b/src/resource.rc
@@ -778,6 +778,7 @@ BEGIN
     12129                   "Плата Apple ][ Memory Expansion Card"
     12130                   "Плата RamFactor"
     12131                   "Плата Saturn Ram Board"
+    12132                   "Мышь ММ8031 через ячейку принтера"
 END
 
 STRINGTABLE DISCARDABLE 
