--- a/src/resource.rc
+++ b/src/resource.rc
@@ -626,7 +626,7 @@ END
 STRINGTABLE DISCARDABLE 
 BEGIN
     9100                    "&Сброс\tCtrl+Break"
-    9101                    "&Полный сброс"
+    9101                    "&Полный сброс\tAlt+Break"
     9102                    "IRQ"
     9103                    "NMI"
 END
@@ -848,6 +848,15 @@ BEGIN
     13003                   "Печать на принтере Windows"
 
     13100                   "Закончить печать"
+END
+
+STRINGTABLE DISCARDABLE 
+BEGIN
+    14000                   "Настройка параллельного интерфейса мыши"
+    14001                   "Выбор типа мыши:"
+    14010                   "Мышь не подключена"
+    14011                   "Мышь MM-8031"
+    14012                   "Мышь ""Марсианка"""
 END
 
 #endif    // Russian resources
