Implemented firmware card Fixed some Apple I issues

--- a/src/resource.rc
+++ b/src/resource.rc
@@ -917,6 +917,7 @@ BEGIN
     12135                   "Apple Cassette Interface (ACI)"
     12136                   "Плата CMS SCSI"
     12137                   "Плата знакогенератора"
+    12138                   "Плата Apple Firmware Card"
 END
 
 STRINGTABLE DISCARDABLE 
