Implemented registers setting

--- a/src/resource.rc
+++ b/src/resource.rc
@@ -121,7 +121,7 @@ END
 IDD_MAIN DIALOG DISCARDABLE  65535, 65535, 187, 190
 STYLE DS_ABSALIGN | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | 
     WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
-CAPTION "Agat v1.17"
+CAPTION "Agat v1.xx"
 FONT 9, "Tahoma"
 BEGIN
     CONTROL         "List1",IDC_CFGLIST,"SysListView32",LVS_SHOWSELALWAYS | 
