--- a/src/resource.rc
+++ b/src/resource.rc
@@ -1004,6 +1004,7 @@ BEGIN
     12017                   "4 ћбайта"  // 131072
     12018                   "1  байт"   // 262144
     12019                   "2  байта"  // 524288
+    12020                   "40  байт"
 END
 
 
