--- a/src/resource.rc
+++ b/src/resource.rc
@@ -375,23 +375,20 @@ BEGIN
     LTEXT           "Ext Charset PROM:",102,7,49,73,8
 END
 
-IDD_PRN9CFG DIALOG DISCARDABLE  0, 0, 206, 110
+IDD_PRN9CFG DIALOG DISCARDABLE  0, 0, 206, 79
 STYLE DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Настройка ячейки принтера Агат-9"
 FONT 9, "Tahoma"
 BEGIN
     EDITTEXT        IDC_FW1_NAME,80,19,101,12,ES_AUTOHSCROLL
     PUSHBUTTON      "...",IDC_CHOOSE_FW1,184,19,15,12
-    EDITTEXT        IDC_FW2_NAME,80,33,101,12,ES_AUTOHSCROLL
-    PUSHBUTTON      "...",IDC_CHOOSE_FW2,184,33,15,12
-    COMBOBOX        IDC_PRINT_MODE,80,52,119,54,CBS_DROPDOWNLIST | 
+    COMBOBOX        IDC_PRINT_MODE,80,36,119,54,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
-    DEFPUSHBUTTON   "OK",IDOK,43,85,50,14
-    PUSHBUTTON      "Отмена",IDCANCEL,110,85,50,14
+    DEFPUSHBUTTON   "OK",IDOK,43,57,50,14
+    PUSHBUTTON      "Отмена",IDCANCEL,110,57,50,14
     LTEXT           "Выбор образов ПЗУ:",IDC_STATIC,7,7,71,8
-    LTEXT           "PROM CX00:",100,7,22,73,8
-    LTEXT           "PROM C800:",101,7,36,73,8
-    LTEXT           "Режим вывода:",102,7,54,68,8
+    LTEXT           "PROM:",100,7,22,73,8
+    LTEXT           "Режим вывода:",102,7,38,68,8
 END
 
 IDD_PRNACFG DIALOG DISCARDABLE  0, 0, 206, 79
@@ -903,7 +900,7 @@ BEGIN
     10003                   "Выбор файла конфигурации"
     10004                   "Файлы шрифтов (*.fnt)@*.fnt@Все файлы@*.*@"
     10005                   "Выбор файла знакогенератора"
-    10006                   "Все файлы образов дисков (*.dsk, *.img, *.nib, *.aim, *.po, *.do, *.hdv)@*.dsk;*.img;*.nib;*.aim;*.po;*.do;*.hdv@Файлы образов (*.dsk, *.po, *.do)@*.dsk;*.po;*.do@Файлы ""сырых"" данных (*.nib)@*.nib@Расширенные файлы ""сырых"" данных (*.aim)@*.aim@Файлы образов жёстких дисков (*.hdv)@*.hdv@Все файлы@*.*@"
+    10006                   "Все файлы образов дисков (*.dsk, *.img, *.nib, *.aim, *.po, *.do, *.hdv, *.40t)@*.dsk;*.img;*.nib;*.aim;*.po;*.do;*.hdv;*.40t@Файлы образов (*.dsk, *.po, *.do)@*.dsk;*.po;*.do@Файлы ""сырых"" данных (*.nib)@*.nib@Расширенные файлы ""сырых"" данных (*.aim)@*.aim@Файлы образов жёстких дисков (*.hdv)@*.hdv@Файлы образов Atom (*.40t)@*.40t@Все файлы@*.*@"
     10007                   "Выбор файла образа диска"
     10008                   "Файлы ленты (*.wav)@*.wav@Все файлы@*.*@"
     10009                   "Выбор файла ленты для чтения"
@@ -1063,6 +1060,8 @@ BEGIN
     12139                   "Терминал Apple I"
     12140                   "Параллельный интерфейс для Atom"
     12141                   "Дисковый интерфейс для Atom"
+    12142                   "Расширенное ПЗУ для Atom (A000)"
+    12143                   "Расширенное ОЗУ для Atom (A000)"
 END
 
 STRINGTABLE DISCARDABLE 
