--- a/src/resource.rc
+++ b/src/resource.rc
@@ -730,43 +730,8 @@ END
 // Version
 //
 
-VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,17,0,0
- PRODUCTVERSION 1,17,0,0
- FILEFLAGSMASK 0x3fL
-#ifdef _DEBUG
- FILEFLAGS 0x1L
-#else
- FILEFLAGS 0x0L
-#endif
- FILEOS 0x40004L
- FILETYPE 0x1L
- FILESUBTYPE 0x0L
-BEGIN
-    BLOCK "StringFileInfo"
-    BEGIN
-        BLOCK "041904b0"
-        BEGIN
-            VALUE "Comments", "Agat-7,9, Apple ][ emulator\0"
-            VALUE "CompanyName", "Nop\0"
-            VALUE "FileDescription", "Agat-7,9, Apple ][ emulator\0"
-            VALUE "FileVersion", "1, 17, 0, 0\0"
-            VALUE "InternalName", "emulator.exe\0"
-            VALUE "LegalCopyright", "Copyright © 2008,2009 Nop\0"
-            VALUE "LegalTrademarks", "\0"
-            VALUE "OriginalFilename", "interface.exe\0"
-            VALUE "PrivateBuild", "\0"
-            VALUE "ProductName", "Agat-7,9, Apple ][ emulator\0"
-            VALUE "ProductVersion", "1, 17, 0, 0\0"
-            VALUE "SpecialBuild", "\0"
-        END
-    END
-    BLOCK "VarFileInfo"
-    BEGIN
-        VALUE "Translation", 0x419, 1200
-    END
-END
-
+#include "version.h"
+#include "resversion.rh"
 #endif    // !_MAC
 
 
