--- a/src/resource.rc
+++ b/src/resource.rc
@@ -497,7 +497,7 @@ BEGIN
     LTEXT           "Имя образа PROM: ",IDC_STATIC,7,10,67,8
 END
 
-IDD_GCONFIG DIALOG DISCARDABLE  0, 0, 278, 163
+IDD_GCONFIG DIALOG DISCARDABLE  0, 0, 278, 177
 STYLE DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Настройка эмулятора"
 FONT 9, "Tahoma"
@@ -511,20 +511,23 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,37,149,10
     CONTROL         "Имитировать звуки дисковода Teac",IDC_TEAC_SOUNDS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,52,140,10
+    CONTROL         "Имитировать звуки жёсткого диска Seagate",
+                    IDC_SEAGATE_SOUNDS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,
+                    7,67,169,10
     CONTROL         "Использовать отладчик",IDC_ENABLE_DEBUGGER,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,7,67,98,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,7,82,98,10
     CONTROL         "Отображать в отладчике недокументированные команды процессора",
                     IDC_DEBUG_ILLEGAL_CMDS,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,7,82,258,10
+                    WS_TABSTOP,7,97,258,10
     CONTROL         "Отображать в отладчике расширенные команды процессора",
                     IDC_DEBUG_NEW_CMDS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,
-                    7,97,227,10
+                    7,112,227,10
     CONTROL         "Синхронное обновление экрана",IDC_SYNC_UPDATE,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,7,112,125,10
-    LTEXT           "Переключение языка ввода:",100,7,126,99,8
-    COMBOBOX        IDC_LANGSEL,118,124,153,52,CBS_DROPDOWNLIST | WS_TABSTOP
-    DEFPUSHBUTTON   "OK",IDOK,73,142,50,14
-    PUSHBUTTON      "Отмена",IDCANCEL,154,142,50,14
+                    BS_AUTOCHECKBOX | WS_TABSTOP,7,127,125,10
+    LTEXT           "Переключение языка ввода:",100,7,141,99,8
+    COMBOBOX        IDC_LANGSEL,118,139,153,52,CBS_DROPDOWNLIST | WS_TABSTOP
+    DEFPUSHBUTTON   "OK",IDOK,73,156,50,14
+    PUSHBUTTON      "Отмена",IDCANCEL,154,156,50,14
 END
 
 IDD_PRNAACFG DIALOG DISCARDABLE  0, 0, 206, 51
@@ -719,7 +722,7 @@ BEGIN
         RIGHTMARGIN, 271
         VERTGUIDE, 26
         TOPMARGIN, 7
-        BOTTOMMARGIN, 156
+        BOTTOMMARGIN, 170
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -731,8 +734,43 @@ END
 // Version
 //
 
-#include "version.h"
-#include "resversion.rh"
+VS_VERSION_INFO VERSIONINFO
+ FILEVERSION 1,24,0,0
+ PRODUCTVERSION 1,24,0,0
+ FILEFLAGSMASK 0x3fL
+#ifdef _DEBUG
+ FILEFLAGS 0x1L
+#else
+ FILEFLAGS 0x0L
+#endif
+ FILEOS 0x40004L
+ FILETYPE 0x1L
+ FILESUBTYPE 0x0L
+BEGIN
+    BLOCK "StringFileInfo"
+    BEGIN
+        BLOCK "041904b0"
+        BEGIN
+            VALUE "Comments", "Agat-7,9, Apple ][ emulator\0"
+            VALUE "CompanyName", "Nop\0"
+            VALUE "FileDescription", "Agat-7,9, Apple ][ emulator\0"
+            VALUE "FileVersion", "1, 24, 0, 0\0"
+            VALUE "InternalName", "emulator.exe\0"
+            VALUE "LegalCopyright", "Copyright © 2008-2012 Nop\0"
+            VALUE "LegalTrademarks", "\0"
+            VALUE "OriginalFilename", "interface.exe\0"
+            VALUE "PrivateBuild", "\0"
+            VALUE "ProductName", "Agat-7,9, Apple ][ emulator\0"
+            VALUE "ProductVersion", "1, 24, 0, 0\0"
+            VALUE "SpecialBuild", "\0"
+        END
+    END
+    BLOCK "VarFileInfo"
+    BEGIN
+        VALUE "Translation", 0x419, 1200
+    END
+END
+
 #endif    // !_MAC
 
 
