Improved Mockingboard support

--- a/src/resource.rc
+++ b/src/resource.rc
@@ -1066,6 +1066,7 @@ BEGIN
     12141                   "Дисковый интерфейс для Atom"
     12142                   "Расширенное ПЗУ для Atom (A000)"
     12143                   "Расширенное ОЗУ для Atom (A000)"
+    12144                   "Контроллер дисковода Liberty Drive"
 END
 
 STRINGTABLE DISCARDABLE 
