--- a/src/resource.rc
+++ b/src/resource.rc
@@ -377,14 +377,14 @@ BEGIN
     LTEXT           "Ext Charset PROM:",102,7,49,73,8
 END
 
-IDD_PRN9CFG DIALOG DISCARDABLE  0, 0, 206, 79
+IDD_PRN9CFG DIALOG DISCARDABLE  0, 0, 210, 79
 STYLE DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Настройка ячейки принтера Агат-9"
 FONT 9, "Tahoma"
 BEGIN
-    EDITTEXT        IDC_FW1_NAME,80,19,101,12,ES_AUTOHSCROLL
-    PUSHBUTTON      "...",IDC_CHOOSE_FW1,184,19,15,12
-    COMBOBOX        IDC_PRINT_MODE,80,36,119,54,CBS_DROPDOWNLIST | 
+    EDITTEXT        IDC_FW1_NAME,80,19,105,12,ES_AUTOHSCROLL
+    PUSHBUTTON      "...",IDC_CHOOSE_FW1,188,19,15,12
+    COMBOBOX        IDC_PRINT_MODE,80,36,123,54,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
     DEFPUSHBUTTON   "OK",IDOK,43,57,50,14
     PUSHBUTTON      "Отмена",IDCANCEL,110,57,50,14
@@ -393,14 +393,14 @@ BEGIN
     LTEXT           "Режим вывода:",102,7,38,68,8
 END
 
-IDD_PRNACFG DIALOG DISCARDABLE  0, 0, 206, 79
+IDD_PRNACFG DIALOG DISCARDABLE  0, 0, 210, 79
 STYLE DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Настройка Printer Interface Card"
 FONT 9, "Tahoma"
 BEGIN
-    EDITTEXT        IDC_FW1_NAME,80,19,101,12,ES_AUTOHSCROLL
-    PUSHBUTTON      "...",IDC_CHOOSE_FW1,184,19,15,12
-    COMBOBOX        IDC_PRINT_MODE,80,38,119,54,CBS_DROPDOWNLIST | 
+    EDITTEXT        IDC_FW1_NAME,80,19,105,12,ES_AUTOHSCROLL
+    PUSHBUTTON      "...",IDC_CHOOSE_FW1,188,19,15,12
+    COMBOBOX        IDC_PRINT_MODE,80,38,123,54,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
     DEFPUSHBUTTON   "OK",IDOK,43,60,50,14
     PUSHBUTTON      "Отмена",IDCANCEL,110,60,50,14
@@ -531,12 +531,12 @@ BEGIN
     PUSHBUTTON      "Отмена",IDCANCEL,154,156,50,14
 END
 
-IDD_PRNAACFG DIALOG DISCARDABLE  0, 0, 206, 51
+IDD_PRNAACFG DIALOG DISCARDABLE  0, 0, 210, 51
 STYLE DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Настройка интерфейса принтера"
 FONT 9, "Tahoma"
 BEGIN
-    COMBOBOX        IDC_PRINT_MODE,80,8,119,54,CBS_DROPDOWNLIST | WS_VSCROLL | 
+    COMBOBOX        IDC_PRINT_MODE,80,8,123,54,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP
     DEFPUSHBUTTON   "OK",IDOK,42,28,50,14
     PUSHBUTTON      "Отмена",IDCANCEL,109,28,50,14
@@ -1155,6 +1155,7 @@ BEGIN
     13001                   "Вывод в текстовый файл"
     13002                   "Вывод в графический файл Tiff"
     13003                   "Печать на принтере Windows"
+    13004                   "Вывод на параллельный порт PC"
 END
 
 STRINGTABLE DISCARDABLE 
