Support opening .pds files

--- a/src/resource.rc
+++ b/src/resource.rc
@@ -906,7 +906,7 @@ BEGIN
     10003                   "Выбор файла конфигурации"
     10004                   "Файлы шрифтов (*.fnt)@*.fnt@Все файлы@*.*@"
     10005                   "Выбор файла знакогенератора"
-    10006                   "Все файлы образов дисков (*.dsk, *.img, *.nib, *.aim, *.po, *.do, *.hdv, *.40t)@*.dsk;*.img;*.nib;*.aim;*.po;*.do;*.hdv;*.40t@Файлы образов (*.dsk, *.po, *.do)@*.dsk;*.po;*.do@Файлы ""сырых"" данных (*.nib)@*.nib@Расширенные файлы ""сырых"" данных (*.aim)@*.aim@Файлы образов жёстких дисков (*.hdv)@*.hdv@Файлы образов Atom (*.40t)@*.40t@Все файлы@*.*@"
+    10006                   "Все файлы образов дисков (*.dsk, *.img, *.nib, *.aim, *.po, *.do, *.hdv, *.40t, *.pds)@*.dsk;*.img;*.nib;*.aim;*.po;*.do;*.hdv;*.40t;*.pds@Файлы образов (*.dsk, *.po, *.do, *.pds)@*.dsk;*.po;*.do;*.pds@Файлы ""сырых"" данных (*.nib)@*.nib@Расширенные файлы ""сырых"" данных (*.aim)@*.aim@Файлы образов жёстких дисков (*.hdv)@*.hdv@Файлы образов Atom (*.40t)@*.40t@Все файлы@*.*@"
     10007                   "Выбор файла образа диска"
     10008                   "Файлы ленты (*.wav)@*.wav@Все файлы@*.*@"
     10009                   "Выбор файла ленты для чтения"
