Exclude release/emulator.ini from Git and installation
This file gets created by the emulator during debugging.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,7 +42,13 @@ add_custom_command(TARGET interface POST_BUILD
     ${COMPRESS_COMMAND}
 )
 
-install(DIRECTORY ../release ../setup DESTINATION . PATTERN .git EXCLUDE PATTERN help EXCLUDE)
+install(
+    DIRECTORY ../release ../setup
+    DESTINATION .
+    PATTERN .git EXCLUDE
+    PATTERN help EXCLUDE
+    PATTERN emulator.ini EXCLUDE)
+
 install(PROGRAMS ${EMULATOR} DESTINATION release)
 
 # libraries
