--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -57,6 +57,7 @@ add_subdirectory(cpu)
 add_subdirectory(fdd)
 add_subdirectory(joystick)
 add_subdirectory(lang)
+add_subdirectory(logging)
 add_subdirectory(mouse)
 add_subdirectory(printer)
 add_subdirectory(ramcard)
